--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 		<body>
 		<li>
-		<ul><a href="founders.html">founders</a></ul>
+		<ul><a href="founders3.html">founders</a></ul>
 		</li>
 
 		</body>
