--- a/founders3.html
+++ b/founders3.html
@@ -7,10 +7,13 @@
 
 	<!-- ------------ Font awesome CDN link ------------------ -->
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 </head>
 <body>
-	<div class="image-area">
-		<div class="img-wrapper">
+		<div class="container">
+		<div class="card-deck">
+			<div class="card">
+			<div class="img-wrapper">
 			<img src="https://images.pexels.com/photos/1220757/pexels-photo-1220757.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="Atul Prajapati">
 			<h1>David james</h1>
 			<h2>founder and so and so</h2>
@@ -21,8 +24,10 @@
 				<li><a href="https://www.youtube.com/channel/UCf-KfxuY8PZBSD_8RW2nYsw"><i class="fab fa-linkedin"></i></a></li>
 				<li><i class="far fa-envelope"></i></li>
 			</ul>
-		</div>
-		<div class="img-wrapper">
+			</div>
+			</div>
+			<div class="card">
+			<div class="img-wrapper">
 			<img src="https://images.pexels.com/photos/1220757/pexels-photo-1220757.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="Atul Prajapati">
 			<h1>David james</h1>
 			<h2>founder and so and so</h2>
@@ -33,8 +38,10 @@
 				<li><a href="https://www.youtube.com/channel/UCf-KfxuY8PZBSD_8RW2nYsw"><i class="fab fa-linkedin"></i></a></li>
 				<li><i class="far fa-envelope"></i></li>
 			</ul>
-		</div>
-		<div class="img-wrapper">
+			</div>
+			</div>
+			<div class="card">
+			<div class="img-wrapper">
 			<img src="https://images.pexels.com/photos/1220757/pexels-photo-1220757.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="Atul Prajapati">
 			<h1>David james</h1>
 			<h2>founder and so and so</h2>
@@ -45,7 +52,12 @@
 				<li><a href="https://www.youtube.com/channel/UCf-KfxuY8PZBSD_8RW2nYsw"><i class="fab fa-linkedin"></i></a></li>
 				<li><i class="far fa-envelope"></i></li>
 			</ul>
+			</div>
+			</div>
 		</div>
-	</div>
+		</div>
+	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
 </body>
 </html>
