--- a/founders3.html
+++ b/founders3.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Profile Image hover effect</title>
-	<link rel="stylesheet" href="style3.css">
+	<link rel="stylesheet" href="style3.1.css">
 
 	<!-- ------------ Font awesome CDN link ------------------ -->
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
@@ -12,17 +12,16 @@
 <body>
 		<div class="container">
 		<div class="card-deck">
-			<div class="card">
+			<div class="card" >
 			<div class="img-wrapper">
 			<img src="https://images.pexels.com/photos/1220757/pexels-photo-1220757.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="Atul Prajapati">
-			<h1>David james</h1>
 			<h2>founder and so and so</h2>
 			<ul>
 				<li><a href="https://github.com/atuljustano"><i class="fab fa-github"></i></a></li>
 				<li><a href="https://www.instagram.com/atulkprajapati2000/"><i class="fab fa-instagram"></i></a></li>
 				<li><a href="https://twitter.com/atuljustano"><i class="fab fa-facebook"></i></a></li>
 				<li><a href="https://www.youtube.com/channel/UCf-KfxuY8PZBSD_8RW2nYsw"><i class="fab fa-linkedin"></i></a></li>
-				<li><i class="far fa-envelope"></i></li>
+				<li><a href="#"><i class="far fa-envelope"></i></a></li>
 			</ul>
 			</div>
 			</div>
@@ -36,7 +35,7 @@
 				<li><a href="https://www.instagram.com/atulkprajapati2000/"><i class="fab fa-instagram"></i></a></li>
 				<li><a href="https://twitter.com/atuljustano"><i class="fab fa-facebook"></i></a></li>
 				<li><a href="https://www.youtube.com/channel/UCf-KfxuY8PZBSD_8RW2nYsw"><i class="fab fa-linkedin"></i></a></li>
-				<li><i class="far fa-envelope"></i></li>
+				<li><a href="#"><i class="far fa-envelope"></i></a></li>
 			</ul>
 			</div>
 			</div>
@@ -50,7 +49,7 @@
 				<li><a href="https://www.instagram.com/atulkprajapati2000/"><i class="fab fa-instagram"></i></a></li>
 				<li><a href="https://twitter.com/atuljustano"><i class="fab fa-facebook"></i></a></li>
 				<li><a href="https://www.youtube.com/channel/UCf-KfxuY8PZBSD_8RW2nYsw"><i class="fab fa-linkedin"></i></a></li>
-				<li><i class="far fa-envelope"></i></li>
+				<li><a href="#"><i class="far fa-envelope"></i></a></li>
 			</ul>
 			</div>
 			</div>
