--- a/founders3.html
+++ b/founders3.html
@@ -15,7 +15,7 @@
 			<div class="card" >
 			<div class="img-wrapper">
 			<img src="https://images.pexels.com/photos/1220757/pexels-photo-1220757.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="Atul Prajapati">
-			<h2>founder and so and so</h2>
+			<h3>POSITION<br/>Name</h3>
 			<ul>
 				<li><a href="https://github.com/atuljustano"><i class="fab fa-github"></i></a></li>
 				<li><a href="https://www.instagram.com/atulkprajapati2000/"><i class="fab fa-instagram"></i></a></li>
@@ -28,8 +28,7 @@
 			<div class="card">
 			<div class="img-wrapper">
 			<img src="https://images.pexels.com/photos/1220757/pexels-photo-1220757.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="Atul Prajapati">
-			<h1>David james</h1>
-			<h2>founder and so and so</h2>
+			<h3>POSITION<br/>Name</h3>
 			<ul>
 				<li><a href="https://github.com/atuljustano"><i class="fab fa-github"></i></a></li>
 				<li><a href="https://www.instagram.com/atulkprajapati2000/"><i class="fab fa-instagram"></i></a></li>
@@ -42,8 +41,7 @@
 			<div class="card">
 			<div class="img-wrapper">
 			<img src="https://images.pexels.com/photos/1220757/pexels-photo-1220757.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="Atul Prajapati">
-			<h1>David james</h1>
-			<h2>founder and so and so</h2>
+			<h3>POSITION<br/>Name</h3>
 			<ul>
 				<li><a href="https://github.com/atuljustano"><i class="fab fa-github"></i></a></li>
 				<li><a href="https://www.instagram.com/atulkprajapati2000/"><i class="fab fa-instagram"></i></a></li>
