--- a/founders3.html
+++ b/founders3.html
@@ -12,19 +12,8 @@
 <body>
 		<div class="container">
 		<div class="card-deck">
-			<div class="card" >
-			<div class="img-wrapper">
-			<img src="https://images.pexels.com/photos/1220757/pexels-photo-1220757.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="Atul Prajapati">
-			<h3>POSITION<br/>Name</h3>
-			<ul>
-				<li><a href="https://github.com/atuljustano"><i class="fab fa-github"></i></a></li>
-				<li><a href="https://www.instagram.com/atulkprajapati2000/"><i class="fab fa-instagram"></i></a></li>
-				<li><a href="https://twitter.com/atuljustano"><i class="fab fa-facebook"></i></a></li>
-				<li><a href="https://www.youtube.com/channel/UCf-KfxuY8PZBSD_8RW2nYsw"><i class="fab fa-linkedin"></i></a></li>
-				<li><a href="#"><i class="far fa-envelope"></i></a></li>
-			</ul>
-			</div>
-			</div>
+			<div class="row">
+			<div class="col-md-4">
 			<div class="card">
 			<div class="img-wrapper">
 			<img src="https://images.pexels.com/photos/1220757/pexels-photo-1220757.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="Atul Prajapati">
@@ -38,6 +27,8 @@
 			</ul>
 			</div>
 			</div>
+			</div>
+			<div class="col-md-4">
 			<div class="card">
 			<div class="img-wrapper">
 			<img src="https://images.pexels.com/photos/1220757/pexels-photo-1220757.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="Atul Prajapati">
@@ -51,6 +42,23 @@
 			</ul>
 			</div>
 			</div>
+			</div>
+			<div class="col-md-4">
+			<div class="card">
+			<div class="img-wrapper">
+			<img src="https://images.pexels.com/photos/1220757/pexels-photo-1220757.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="Atul Prajapati">
+			<h3>POSITION<br/>Name</h3>
+			<ul>
+				<li><a href="https://github.com/atuljustano"><i class="fab fa-github"></i></a></li>
+				<li><a href="https://www.instagram.com/atulkprajapati2000/"><i class="fab fa-instagram"></i></a></li>
+				<li><a href="https://twitter.com/atuljustano"><i class="fab fa-facebook"></i></a></li>
+				<li><a href="https://www.youtube.com/channel/UCf-KfxuY8PZBSD_8RW2nYsw"><i class="fab fa-linkedin"></i></a></li>
+				<li><a href="#"><i class="far fa-envelope"></i></a></li>
+			</ul>
+			</div>
+			</div>
+			</div>
+		</div>
 		</div>
 		</div>
 	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
